// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Game> can be lost 1`] = `
<Game
  blocks={
    Array [
      "LINE",
      "LINE",
    ]
  }
  collisionMap={Object {}}
  dispatch={[Function]}
  score={
    Object {
      "level": 1,
      "numBlocks": 0,
      "numLines": 0,
      "score": 0,
    }
  }
>
  <div
    className="game"
  >
    <div
      className="area"
    >
      <Block
        blockId={0}
        collisionMap={Object {}}
        level={1}
        moving={true}
        onStopMoving={[Function]}
      >
        <div
          className="block"
          style={
            Object {
              "left": 125,
              "top": 0,
            }
          }
        >
          <div
            className="cell line"
            style={
              Object {
                "left": 0,
                "top": 0,
              }
            }
          />
          <div
            className="cell line"
            style={
              Object {
                "left": 0,
                "top": 25,
              }
            }
          />
          <div
            className="cell line"
            style={
              Object {
                "left": 0,
                "top": 50,
              }
            }
          />
          <div
            className="cell line"
            style={
              Object {
                "left": 0,
                "top": 75,
              }
            }
          />
        </div>
      </Block>
    </div>
    <div
      className="score"
    >
      <table>
        <tbody>
          <tr>
            <td>
              Lines
            </td>
            <td>
              0
            </td>
          </tr>
          <tr>
            <td>
              Level
            </td>
            <td>
              1
            </td>
          </tr>
          <tr>
            <td>
              Score
            </td>
            <td>
              0
            </td>
          </tr>
          <tr>
            <td>
              Next
            </td>
            <td>
              <Block>
                <div
                  className="block"
                  style={Object {}}
                >
                  <div
                    className="cell line"
                    style={
                      Object {
                        "left": 0,
                        "top": 0,
                      }
                    }
                  />
                  <div
                    className="cell line"
                    style={
                      Object {
                        "left": 0,
                        "top": 25,
                      }
                    }
                  />
                  <div
                    className="cell line"
                    style={
                      Object {
                        "left": 0,
                        "top": 50,
                      }
                    }
                  />
                  <div
                    className="cell line"
                    style={
                      Object {
                        "left": 0,
                        "top": 75,
                      }
                    }
                  />
                </div>
              </Block>
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</Game>
`;

exports[`<Game> can be lost 2`] = `
<Game
  blocks={
    Array [
      "LINE",
      "LINE",
    ]
  }
  collisionMap={
    Object {
      "5,16": "line",
      "5,17": "line",
      "5,18": "line",
      "5,19": "line",
    }
  }
  dispatch={[Function]}
  score={
    Object {
      "level": 1,
      "numBlocks": 1,
      "numLines": 0,
      "score": 0,
    }
  }
>
  <div
    className="game"
  >
    <div
      className="area"
    >
      <Block
        blockId={1}
        collisionMap={
          Object {
            "5,16": "line",
            "5,17": "line",
            "5,18": "line",
            "5,19": "line",
          }
        }
        level={1}
        moving={true}
        onStopMoving={[Function]}
      >
        <div
          className="block"
          style={
            Object {
              "left": 125,
              "top": 0,
            }
          }
        >
          <div
            className="cell line"
            style={
              Object {
                "left": 0,
                "top": 0,
              }
            }
          />
          <div
            className="cell line"
            style={
              Object {
                "left": 0,
                "top": 25,
              }
            }
          />
          <div
            className="cell line"
            style={
              Object {
                "left": 0,
                "top": 50,
              }
            }
          />
          <div
            className="cell line"
            style={
              Object {
                "left": 0,
                "top": 75,
              }
            }
          />
        </div>
      </Block>
      <div
        className="cell line"
        style={
          Object {
            "left": 125,
            "top": 400,
          }
        }
      />
      <div
        className="cell line"
        style={
          Object {
            "left": 125,
            "top": 425,
          }
        }
      />
      <div
        className="cell line"
        style={
          Object {
            "left": 125,
            "top": 450,
          }
        }
      />
      <div
        className="cell line"
        style={
          Object {
            "left": 125,
            "top": 475,
          }
        }
      />
    </div>
    <div
      className="score"
    >
      <table>
        <tbody>
          <tr>
            <td>
              Lines
            </td>
            <td>
              0
            </td>
          </tr>
          <tr>
            <td>
              Level
            </td>
            <td>
              1
            </td>
          </tr>
          <tr>
            <td>
              Score
            </td>
            <td>
              0
            </td>
          </tr>
          <tr>
            <td>
              Next
            </td>
            <td>
              <Block>
                <div
                  className="block"
                  style={Object {}}
                >
                  <div
                    className="cell line"
                    style={
                      Object {
                        "left": 0,
                        "top": 0,
                      }
                    }
                  />
                  <div
                    className="cell line"
                    style={
                      Object {
                        "left": 0,
                        "top": 25,
                      }
                    }
                  />
                  <div
                    className="cell line"
                    style={
                      Object {
                        "left": 0,
                        "top": 50,
                      }
                    }
                  />
                  <div
                    className="cell line"
                    style={
                      Object {
                        "left": 0,
                        "top": 75,
                      }
                    }
                  />
                </div>
              </Block>
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</Game>
`;

exports[`<Game> can be lost 3`] = `
<Game
  blocks={
    Array [
      "LINE",
      "LINE",
    ]
  }
  collisionMap={
    Object {
      "5,12": "line",
      "5,13": "line",
      "5,14": "line",
      "5,15": "line",
      "5,16": "line",
      "5,17": "line",
      "5,18": "line",
      "5,19": "line",
    }
  }
  dispatch={[Function]}
  score={
    Object {
      "level": 1,
      "numBlocks": 2,
      "numLines": 0,
      "score": 0,
    }
  }
>
  <div
    className="game"
  >
    <div
      className="area"
    >
      <Block
        blockId={2}
        collisionMap={
          Object {
            "5,12": "line",
            "5,13": "line",
            "5,14": "line",
            "5,15": "line",
            "5,16": "line",
            "5,17": "line",
            "5,18": "line",
            "5,19": "line",
          }
        }
        level={1}
        moving={true}
        onStopMoving={[Function]}
      >
        <div
          className="block"
          style={
            Object {
              "left": 125,
              "top": 0,
            }
          }
        >
          <div
            className="cell line"
            style={
              Object {
                "left": 0,
                "top": 0,
              }
            }
          />
          <div
            className="cell line"
            style={
              Object {
                "left": 0,
                "top": 25,
              }
            }
          />
          <div
            className="cell line"
            style={
              Object {
                "left": 0,
                "top": 50,
              }
            }
          />
          <div
            className="cell line"
            style={
              Object {
                "left": 0,
                "top": 75,
              }
            }
          />
        </div>
      </Block>
      <div
        className="cell line"
        style={
          Object {
            "left": 125,
            "top": 400,
          }
        }
      />
      <div
        className="cell line"
        style={
          Object {
            "left": 125,
            "top": 425,
          }
        }
      />
      <div
        className="cell line"
        style={
          Object {
            "left": 125,
            "top": 450,
          }
        }
      />
      <div
        className="cell line"
        style={
          Object {
            "left": 125,
            "top": 475,
          }
        }
      />
      <div
        className="cell line"
        style={
          Object {
            "left": 125,
            "top": 300,
          }
        }
      />
      <div
        className="cell line"
        style={
          Object {
            "left": 125,
            "top": 325,
          }
        }
      />
      <div
        className="cell line"
        style={
          Object {
            "left": 125,
            "top": 350,
          }
        }
      />
      <div
        className="cell line"
        style={
          Object {
            "left": 125,
            "top": 375,
          }
        }
      />
    </div>
    <div
      className="score"
    >
      <table>
        <tbody>
          <tr>
            <td>
              Lines
            </td>
            <td>
              0
            </td>
          </tr>
          <tr>
            <td>
              Level
            </td>
            <td>
              1
            </td>
          </tr>
          <tr>
            <td>
              Score
            </td>
            <td>
              0
            </td>
          </tr>
          <tr>
            <td>
              Next
            </td>
            <td>
              <Block>
                <div
                  className="block"
                  style={Object {}}
                >
                  <div
                    className="cell line"
                    style={
                      Object {
                        "left": 0,
                        "top": 0,
                      }
                    }
                  />
                  <div
                    className="cell line"
                    style={
                      Object {
                        "left": 0,
                        "top": 25,
                      }
                    }
                  />
                  <div
                    className="cell line"
                    style={
                      Object {
                        "left": 0,
                        "top": 50,
                      }
                    }
                  />
                  <div
                    className="cell line"
                    style={
                      Object {
                        "left": 0,
                        "top": 75,
                      }
                    }
                  />
                </div>
              </Block>
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</Game>
`;

exports[`<Game> can be lost 4`] = `
<Game
  blocks={
    Array [
      "LINE",
      "LINE",
    ]
  }
  collisionMap={
    Object {
      "5,10": "line",
      "5,11": "line",
      "5,12": "line",
      "5,13": "line",
      "5,14": "line",
      "5,15": "line",
      "5,16": "line",
      "5,17": "line",
      "5,18": "line",
      "5,19": "line",
      "5,8": "line",
      "5,9": "line",
    }
  }
  dispatch={[Function]}
  score={
    Object {
      "level": 1,
      "numBlocks": 3,
      "numLines": 0,
      "score": 0,
    }
  }
>
  <div
    className="game"
  >
    <div
      className="area"
    >
      <Block
        blockId={3}
        collisionMap={
          Object {
            "5,10": "line",
            "5,11": "line",
            "5,12": "line",
            "5,13": "line",
            "5,14": "line",
            "5,15": "line",
            "5,16": "line",
            "5,17": "line",
            "5,18": "line",
            "5,19": "line",
            "5,8": "line",
            "5,9": "line",
          }
        }
        level={1}
        moving={true}
        onStopMoving={[Function]}
      >
        <div
          className="block"
          style={
            Object {
              "left": 125,
              "top": 0,
            }
          }
        >
          <div
            className="cell line"
            style={
              Object {
                "left": 0,
                "top": 0,
              }
            }
          />
          <div
            className="cell line"
            style={
              Object {
                "left": 0,
                "top": 25,
              }
            }
          />
          <div
            className="cell line"
            style={
              Object {
                "left": 0,
                "top": 50,
              }
            }
          />
          <div
            className="cell line"
            style={
              Object {
                "left": 0,
                "top": 75,
              }
            }
          />
        </div>
      </Block>
      <div
        className="cell line"
        style={
          Object {
            "left": 125,
            "top": 400,
          }
        }
      />
      <div
        className="cell line"
        style={
          Object {
            "left": 125,
            "top": 425,
          }
        }
      />
      <div
        className="cell line"
        style={
          Object {
            "left": 125,
            "top": 450,
          }
        }
      />
      <div
        className="cell line"
        style={
          Object {
            "left": 125,
            "top": 475,
          }
        }
      />
      <div
        className="cell line"
        style={
          Object {
            "left": 125,
            "top": 300,
          }
        }
      />
      <div
        className="cell line"
        style={
          Object {
            "left": 125,
            "top": 325,
          }
        }
      />
      <div
        className="cell line"
        style={
          Object {
            "left": 125,
            "top": 350,
          }
        }
      />
      <div
        className="cell line"
        style={
          Object {
            "left": 125,
            "top": 375,
          }
        }
      />
      <div
        className="cell line"
        style={
          Object {
            "left": 125,
            "top": 200,
          }
        }
      />
      <div
        className="cell line"
        style={
          Object {
            "left": 125,
            "top": 225,
          }
        }
      />
      <div
        className="cell line"
        style={
          Object {
            "left": 125,
            "top": 250,
          }
        }
      />
      <div
        className="cell line"
        style={
          Object {
            "left": 125,
            "top": 275,
          }
        }
      />
    </div>
    <div
      className="score"
    >
      <table>
        <tbody>
          <tr>
            <td>
              Lines
            </td>
            <td>
              0
            </td>
          </tr>
          <tr>
            <td>
              Level
            </td>
            <td>
              1
            </td>
          </tr>
          <tr>
            <td>
              Score
            </td>
            <td>
              0
            </td>
          </tr>
          <tr>
            <td>
              Next
            </td>
            <td>
              <Block>
                <div
                  className="block"
                  style={Object {}}
                >
                  <div
                    className="cell line"
                    style={
                      Object {
                        "left": 0,
                        "top": 0,
                      }
                    }
                  />
                  <div
                    className="cell line"
                    style={
                      Object {
                        "left": 0,
                        "top": 25,
                      }
                    }
                  />
                  <div
                    className="cell line"
                    style={
                      Object {
                        "left": 0,
                        "top": 50,
                      }
                    }
                  />
                  <div
                    className="cell line"
                    style={
                      Object {
                        "left": 0,
                        "top": 75,
                      }
                    }
                  />
                </div>
              </Block>
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</Game>
`;

exports[`<Game> can be lost 5`] = `
<Game
  blocks={
    Array [
      "LINE",
      "LINE",
    ]
  }
  collisionMap={
    Object {
      "5,10": "line",
      "5,11": "line",
      "5,12": "line",
      "5,13": "line",
      "5,14": "line",
      "5,15": "line",
      "5,16": "line",
      "5,17": "line",
      "5,18": "line",
      "5,19": "line",
      "5,4": "line",
      "5,5": "line",
      "5,6": "line",
      "5,7": "line",
      "5,8": "line",
      "5,9": "line",
    }
  }
  dispatch={[Function]}
  score={
    Object {
      "level": 1,
      "numBlocks": 4,
      "numLines": 0,
      "score": 0,
    }
  }
>
  <div
    className="game"
  >
    <div
      className="area"
    >
      <Block
        blockId={4}
        collisionMap={
          Object {
            "5,10": "line",
            "5,11": "line",
            "5,12": "line",
            "5,13": "line",
            "5,14": "line",
            "5,15": "line",
            "5,16": "line",
            "5,17": "line",
            "5,18": "line",
            "5,19": "line",
            "5,4": "line",
            "5,5": "line",
            "5,6": "line",
            "5,7": "line",
            "5,8": "line",
            "5,9": "line",
          }
        }
        level={1}
        moving={true}
        onStopMoving={[Function]}
      >
        <div
          className="block"
          style={
            Object {
              "left": 125,
              "top": 0,
            }
          }
        >
          <div
            className="cell line"
            style={
              Object {
                "left": 0,
                "top": 0,
              }
            }
          />
          <div
            className="cell line"
            style={
              Object {
                "left": 0,
                "top": 25,
              }
            }
          />
          <div
            className="cell line"
            style={
              Object {
                "left": 0,
                "top": 50,
              }
            }
          />
          <div
            className="cell line"
            style={
              Object {
                "left": 0,
                "top": 75,
              }
            }
          />
        </div>
      </Block>
      <div
        className="cell line"
        style={
          Object {
            "left": 125,
            "top": 400,
          }
        }
      />
      <div
        className="cell line"
        style={
          Object {
            "left": 125,
            "top": 425,
          }
        }
      />
      <div
        className="cell line"
        style={
          Object {
            "left": 125,
            "top": 450,
          }
        }
      />
      <div
        className="cell line"
        style={
          Object {
            "left": 125,
            "top": 475,
          }
        }
      />
      <div
        className="cell line"
        style={
          Object {
            "left": 125,
            "top": 300,
          }
        }
      />
      <div
        className="cell line"
        style={
          Object {
            "left": 125,
            "top": 325,
          }
        }
      />
      <div
        className="cell line"
        style={
          Object {
            "left": 125,
            "top": 350,
          }
        }
      />
      <div
        className="cell line"
        style={
          Object {
            "left": 125,
            "top": 375,
          }
        }
      />
      <div
        className="cell line"
        style={
          Object {
            "left": 125,
            "top": 200,
          }
        }
      />
      <div
        className="cell line"
        style={
          Object {
            "left": 125,
            "top": 225,
          }
        }
      />
      <div
        className="cell line"
        style={
          Object {
            "left": 125,
            "top": 250,
          }
        }
      />
      <div
        className="cell line"
        style={
          Object {
            "left": 125,
            "top": 275,
          }
        }
      />
      <div
        className="cell line"
        style={
          Object {
            "left": 125,
            "top": 100,
          }
        }
      />
      <div
        className="cell line"
        style={
          Object {
            "left": 125,
            "top": 125,
          }
        }
      />
      <div
        className="cell line"
        style={
          Object {
            "left": 125,
            "top": 150,
          }
        }
      />
      <div
        className="cell line"
        style={
          Object {
            "left": 125,
            "top": 175,
          }
        }
      />
    </div>
    <div
      className="score"
    >
      <table>
        <tbody>
          <tr>
            <td>
              Lines
            </td>
            <td>
              0
            </td>
          </tr>
          <tr>
            <td>
              Level
            </td>
            <td>
              1
            </td>
          </tr>
          <tr>
            <td>
              Score
            </td>
            <td>
              0
            </td>
          </tr>
          <tr>
            <td>
              Next
            </td>
            <td>
              <Block>
                <div
                  className="block"
                  style={Object {}}
                >
                  <div
                    className="cell line"
                    style={
                      Object {
                        "left": 0,
                        "top": 0,
                      }
                    }
                  />
                  <div
                    className="cell line"
                    style={
                      Object {
                        "left": 0,
                        "top": 25,
                      }
                    }
                  />
                  <div
                    className="cell line"
                    style={
                      Object {
                        "left": 0,
                        "top": 50,
                      }
                    }
                  />
                  <div
                    className="cell line"
                    style={
                      Object {
                        "left": 0,
                        "top": 75,
                      }
                    }
                  />
                </div>
              </Block>
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</Game>
`;

exports[`<Game> can be lost 6`] = `
<Game
  blocks={
    Array [
      "LINE",
      "LINE",
    ]
  }
  collisionMap={
    Object {
      "5,0": "line",
      "5,1": "line",
      "5,10": "line",
      "5,11": "line",
      "5,12": "line",
      "5,13": "line",
      "5,14": "line",
      "5,15": "line",
      "5,16": "line",
      "5,17": "line",
      "5,18": "line",
      "5,19": "line",
      "5,2": "line",
      "5,3": "line",
      "5,4": "line",
      "5,5": "line",
      "5,6": "line",
      "5,7": "line",
      "5,8": "line",
      "5,9": "line",
    }
  }
  dispatch={[Function]}
  score={
    Object {
      "level": 1,
      "numBlocks": 5,
      "numLines": 0,
      "score": 0,
    }
  }
>
  <div
    className="game"
  >
    <div
      className="area"
    >
      <Block
        blockId={5}
        collisionMap={
          Object {
            "5,0": "line",
            "5,1": "line",
            "5,10": "line",
            "5,11": "line",
            "5,12": "line",
            "5,13": "line",
            "5,14": "line",
            "5,15": "line",
            "5,16": "line",
            "5,17": "line",
            "5,18": "line",
            "5,19": "line",
            "5,2": "line",
            "5,3": "line",
            "5,4": "line",
            "5,5": "line",
            "5,6": "line",
            "5,7": "line",
            "5,8": "line",
            "5,9": "line",
          }
        }
        level={1}
        moving={true}
        onStopMoving={[Function]}
      >
        <div
          className="block"
          style={
            Object {
              "left": 125,
              "top": 0,
            }
          }
        >
          <div
            className="cell line"
            style={
              Object {
                "left": 0,
                "top": 0,
              }
            }
          />
          <div
            className="cell line"
            style={
              Object {
                "left": 0,
                "top": 25,
              }
            }
          />
          <div
            className="cell line"
            style={
              Object {
                "left": 0,
                "top": 50,
              }
            }
          />
          <div
            className="cell line"
            style={
              Object {
                "left": 0,
                "top": 75,
              }
            }
          />
        </div>
      </Block>
      <div
        className="cell line"
        style={
          Object {
            "left": 125,
            "top": 400,
          }
        }
      />
      <div
        className="cell line"
        style={
          Object {
            "left": 125,
            "top": 425,
          }
        }
      />
      <div
        className="cell line"
        style={
          Object {
            "left": 125,
            "top": 450,
          }
        }
      />
      <div
        className="cell line"
        style={
          Object {
            "left": 125,
            "top": 475,
          }
        }
      />
      <div
        className="cell line"
        style={
          Object {
            "left": 125,
            "top": 300,
          }
        }
      />
      <div
        className="cell line"
        style={
          Object {
            "left": 125,
            "top": 325,
          }
        }
      />
      <div
        className="cell line"
        style={
          Object {
            "left": 125,
            "top": 350,
          }
        }
      />
      <div
        className="cell line"
        style={
          Object {
            "left": 125,
            "top": 375,
          }
        }
      />
      <div
        className="cell line"
        style={
          Object {
            "left": 125,
            "top": 200,
          }
        }
      />
      <div
        className="cell line"
        style={
          Object {
            "left": 125,
            "top": 225,
          }
        }
      />
      <div
        className="cell line"
        style={
          Object {
            "left": 125,
            "top": 250,
          }
        }
      />
      <div
        className="cell line"
        style={
          Object {
            "left": 125,
            "top": 275,
          }
        }
      />
      <div
        className="cell line"
        style={
          Object {
            "left": 125,
            "top": 100,
          }
        }
      />
      <div
        className="cell line"
        style={
          Object {
            "left": 125,
            "top": 125,
          }
        }
      />
      <div
        className="cell line"
        style={
          Object {
            "left": 125,
            "top": 150,
          }
        }
      />
      <div
        className="cell line"
        style={
          Object {
            "left": 125,
            "top": 175,
          }
        }
      />
      <div
        className="cell line"
        style={
          Object {
            "left": 125,
            "top": 0,
          }
        }
      />
      <div
        className="cell line"
        style={
          Object {
            "left": 125,
            "top": 25,
          }
        }
      />
      <div
        className="cell line"
        style={
          Object {
            "left": 125,
            "top": 50,
          }
        }
      />
      <div
        className="cell line"
        style={
          Object {
            "left": 125,
            "top": 75,
          }
        }
      />
    </div>
    <div
      className="score"
    >
      <table>
        <tbody>
          <tr>
            <td>
              Lines
            </td>
            <td>
              0
            </td>
          </tr>
          <tr>
            <td>
              Level
            </td>
            <td>
              1
            </td>
          </tr>
          <tr>
            <td>
              Score
            </td>
            <td>
              0
            </td>
          </tr>
          <tr>
            <td>
              Next
            </td>
            <td>
              <Block>
                <div
                  className="block"
                  style={Object {}}
                >
                  <div
                    className="cell line"
                    style={
                      Object {
                        "left": 0,
                        "top": 0,
                      }
                    }
                  />
                  <div
                    className="cell line"
                    style={
                      Object {
                        "left": 0,
                        "top": 25,
                      }
                    }
                  />
                  <div
                    className="cell line"
                    style={
                      Object {
                        "left": 0,
                        "top": 50,
                      }
                    }
                  />
                  <div
                    className="cell line"
                    style={
                      Object {
                        "left": 0,
                        "top": 75,
                      }
                    }
                  />
                </div>
              </Block>
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</Game>
`;

exports[`<Game> renders a block 1`] = `
<div
  className="game"
>
  <div
    className="area"
  >
    <Block
      collisionMap={Object {}}
      moving={true}
      onStopMoving={[Function]}
    />
  </div>
  <div
    className="score"
  >
    <table>
      <tbody>
        <tr>
          <td>
            Lines
          </td>
          <td />
        </tr>
        <tr>
          <td>
            Level
          </td>
          <td />
        </tr>
        <tr>
          <td>
            Score
          </td>
          <td />
        </tr>
        <tr>
          <td>
            Next
          </td>
          <td>
            <Block />
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;

exports[`<Game> renders all block types 1`] = `
<div
  className="game"
>
  <div
    className="area"
  >
    <Block
      collisionMap={Object {}}
      moving={true}
      onStopMoving={[Function]}
    />
  </div>
  <div
    className="score"
  >
    <table>
      <tbody>
        <tr>
          <td>
            Lines
          </td>
          <td />
        </tr>
        <tr>
          <td>
            Level
          </td>
          <td />
        </tr>
        <tr>
          <td>
            Score
          </td>
          <td />
        </tr>
        <tr>
          <td>
            Next
          </td>
          <td>
            <Block />
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;

exports[`<Game> renders all block types 2`] = `
<div
  className="game"
>
  <div
    className="area"
  >
    <Block
      collisionMap={Object {}}
      moving={true}
      onStopMoving={[Function]}
    />
  </div>
  <div
    className="score"
  >
    <table>
      <tbody>
        <tr>
          <td>
            Lines
          </td>
          <td />
        </tr>
        <tr>
          <td>
            Level
          </td>
          <td />
        </tr>
        <tr>
          <td>
            Score
          </td>
          <td />
        </tr>
        <tr>
          <td>
            Next
          </td>
          <td>
            <Block />
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;

exports[`<Game> renders all block types 3`] = `
<div
  className="game"
>
  <div
    className="area"
  >
    <Block
      collisionMap={Object {}}
      moving={true}
      onStopMoving={[Function]}
    />
  </div>
  <div
    className="score"
  >
    <table>
      <tbody>
        <tr>
          <td>
            Lines
          </td>
          <td />
        </tr>
        <tr>
          <td>
            Level
          </td>
          <td />
        </tr>
        <tr>
          <td>
            Score
          </td>
          <td />
        </tr>
        <tr>
          <td>
            Next
          </td>
          <td>
            <Block />
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;

exports[`<Game> renders all block types 4`] = `
<div
  className="game"
>
  <div
    className="area"
  >
    <Block
      collisionMap={Object {}}
      moving={true}
      onStopMoving={[Function]}
    />
  </div>
  <div
    className="score"
  >
    <table>
      <tbody>
        <tr>
          <td>
            Lines
          </td>
          <td />
        </tr>
        <tr>
          <td>
            Level
          </td>
          <td />
        </tr>
        <tr>
          <td>
            Score
          </td>
          <td />
        </tr>
        <tr>
          <td>
            Next
          </td>
          <td>
            <Block />
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;

exports[`<Game> renders all block types 5`] = `
<div
  className="game"
>
  <div
    className="area"
  >
    <Block
      collisionMap={Object {}}
      moving={true}
      onStopMoving={[Function]}
    />
  </div>
  <div
    className="score"
  >
    <table>
      <tbody>
        <tr>
          <td>
            Lines
          </td>
          <td />
        </tr>
        <tr>
          <td>
            Level
          </td>
          <td />
        </tr>
        <tr>
          <td>
            Score
          </td>
          <td />
        </tr>
        <tr>
          <td>
            Next
          </td>
          <td>
            <Block />
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;

exports[`<Game> renders all block types 6`] = `
<div
  className="game"
>
  <div
    className="area"
  >
    <Block
      collisionMap={Object {}}
      moving={true}
      onStopMoving={[Function]}
    />
  </div>
  <div
    className="score"
  >
    <table>
      <tbody>
        <tr>
          <td>
            Lines
          </td>
          <td />
        </tr>
        <tr>
          <td>
            Level
          </td>
          <td />
        </tr>
        <tr>
          <td>
            Score
          </td>
          <td />
        </tr>
        <tr>
          <td>
            Next
          </td>
          <td>
            <Block />
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;

exports[`<Game> renders all block types 7`] = `
<div
  className="game"
>
  <div
    className="area"
  >
    <Block
      collisionMap={Object {}}
      moving={true}
      onStopMoving={[Function]}
    />
  </div>
  <div
    className="score"
  >
    <table>
      <tbody>
        <tr>
          <td>
            Lines
          </td>
          <td />
        </tr>
        <tr>
          <td>
            Level
          </td>
          <td />
        </tr>
        <tr>
          <td>
            Score
          </td>
          <td />
        </tr>
        <tr>
          <td>
            Next
          </td>
          <td>
            <Block />
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;

exports[`<Game> will move blocks to the bottom 1`] = `
<Game
  blocks={
    Array [
      "LINE",
      "LINE",
    ]
  }
  collisionMap={Object {}}
  dispatch={[Function]}
  score={
    Object {
      "level": 1,
      "numBlocks": 0,
      "numLines": 0,
      "score": 0,
    }
  }
>
  <div
    className="game"
  >
    <div
      className="area"
    >
      <Block
        blockId={0}
        collisionMap={Object {}}
        level={1}
        moving={true}
        onStopMoving={[Function]}
      >
        <div
          className="block"
          style={
            Object {
              "left": 125,
              "top": 0,
            }
          }
        >
          <div
            className="cell line"
            style={
              Object {
                "left": 0,
                "top": 0,
              }
            }
          />
          <div
            className="cell line"
            style={
              Object {
                "left": 0,
                "top": 25,
              }
            }
          />
          <div
            className="cell line"
            style={
              Object {
                "left": 0,
                "top": 50,
              }
            }
          />
          <div
            className="cell line"
            style={
              Object {
                "left": 0,
                "top": 75,
              }
            }
          />
        </div>
      </Block>
    </div>
    <div
      className="score"
    >
      <table>
        <tbody>
          <tr>
            <td>
              Lines
            </td>
            <td>
              0
            </td>
          </tr>
          <tr>
            <td>
              Level
            </td>
            <td>
              1
            </td>
          </tr>
          <tr>
            <td>
              Score
            </td>
            <td>
              0
            </td>
          </tr>
          <tr>
            <td>
              Next
            </td>
            <td>
              <Block>
                <div
                  className="block"
                  style={Object {}}
                >
                  <div
                    className="cell line"
                    style={
                      Object {
                        "left": 0,
                        "top": 0,
                      }
                    }
                  />
                  <div
                    className="cell line"
                    style={
                      Object {
                        "left": 0,
                        "top": 25,
                      }
                    }
                  />
                  <div
                    className="cell line"
                    style={
                      Object {
                        "left": 0,
                        "top": 50,
                      }
                    }
                  />
                  <div
                    className="cell line"
                    style={
                      Object {
                        "left": 0,
                        "top": 75,
                      }
                    }
                  />
                </div>
              </Block>
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</Game>
`;

exports[`<Game> will move blocks to the bottom 2`] = `
<Game
  blocks={
    Array [
      "LINE",
      "LINE",
    ]
  }
  collisionMap={Object {}}
  dispatch={[Function]}
  score={
    Object {
      "level": 1,
      "numBlocks": 0,
      "numLines": 0,
      "score": 0,
    }
  }
>
  <div
    className="game"
  >
    <div
      className="area"
    >
      <Block
        blockId={0}
        collisionMap={Object {}}
        level={1}
        moving={true}
        onStopMoving={[Function]}
      >
        <div
          className="block"
          style={
            Object {
              "left": 125,
              "top": 400,
            }
          }
        >
          <div
            className="cell line"
            style={
              Object {
                "left": 0,
                "top": 0,
              }
            }
          />
          <div
            className="cell line"
            style={
              Object {
                "left": 0,
                "top": 25,
              }
            }
          />
          <div
            className="cell line"
            style={
              Object {
                "left": 0,
                "top": 50,
              }
            }
          />
          <div
            className="cell line"
            style={
              Object {
                "left": 0,
                "top": 75,
              }
            }
          />
        </div>
      </Block>
    </div>
    <div
      className="score"
    >
      <table>
        <tbody>
          <tr>
            <td>
              Lines
            </td>
            <td>
              0
            </td>
          </tr>
          <tr>
            <td>
              Level
            </td>
            <td>
              1
            </td>
          </tr>
          <tr>
            <td>
              Score
            </td>
            <td>
              0
            </td>
          </tr>
          <tr>
            <td>
              Next
            </td>
            <td>
              <Block>
                <div
                  className="block"
                  style={Object {}}
                >
                  <div
                    className="cell line"
                    style={
                      Object {
                        "left": 0,
                        "top": 0,
                      }
                    }
                  />
                  <div
                    className="cell line"
                    style={
                      Object {
                        "left": 0,
                        "top": 25,
                      }
                    }
                  />
                  <div
                    className="cell line"
                    style={
                      Object {
                        "left": 0,
                        "top": 50,
                      }
                    }
                  />
                  <div
                    className="cell line"
                    style={
                      Object {
                        "left": 0,
                        "top": 75,
                      }
                    }
                  />
                </div>
              </Block>
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</Game>
`;

exports[`<Game> will remove lines 1`] = `
<Game
  blocks={
    Array [
      "LINE",
      "LINE",
    ]
  }
  collisionMap={
    Object {
      "0,16": "line",
      "0,17": "line",
      "0,18": "line",
      "0,19": "line",
      "1,16": "line",
      "1,17": "line",
      "1,18": "line",
      "1,19": "line",
      "2,16": "line",
      "2,17": "line",
      "2,18": "line",
      "2,19": "line",
      "3,16": "line",
      "3,17": "line",
      "3,18": "line",
      "3,19": "line",
      "4,16": "line",
      "4,17": "line",
      "4,18": "line",
      "4,19": "line",
      "6,16": "line",
      "6,17": "line",
      "6,18": "line",
      "6,19": "line",
      "7,16": "line",
      "7,17": "line",
      "7,18": "line",
      "7,19": "line",
      "8,16": "line",
      "8,17": "line",
      "8,18": "line",
      "8,19": "line",
      "9,16": "line",
      "9,17": "line",
      "9,18": "line",
      "9,19": "line",
    }
  }
  dispatch={[Function]}
  score={
    Object {
      "level": 1,
      "numBlocks": 0,
      "numLines": 0,
      "score": 0,
    }
  }
>
  <div
    className="game"
  >
    <div
      className="area"
    >
      <Block
        blockId={0}
        collisionMap={
          Object {
            "0,16": "line",
            "0,17": "line",
            "0,18": "line",
            "0,19": "line",
            "1,16": "line",
            "1,17": "line",
            "1,18": "line",
            "1,19": "line",
            "2,16": "line",
            "2,17": "line",
            "2,18": "line",
            "2,19": "line",
            "3,16": "line",
            "3,17": "line",
            "3,18": "line",
            "3,19": "line",
            "4,16": "line",
            "4,17": "line",
            "4,18": "line",
            "4,19": "line",
            "6,16": "line",
            "6,17": "line",
            "6,18": "line",
            "6,19": "line",
            "7,16": "line",
            "7,17": "line",
            "7,18": "line",
            "7,19": "line",
            "8,16": "line",
            "8,17": "line",
            "8,18": "line",
            "8,19": "line",
            "9,16": "line",
            "9,17": "line",
            "9,18": "line",
            "9,19": "line",
          }
        }
        level={1}
        moving={true}
        onStopMoving={[Function]}
      >
        <div
          className="block"
          style={
            Object {
              "left": 125,
              "top": 0,
            }
          }
        >
          <div
            className="cell line"
            style={
              Object {
                "left": 0,
                "top": 0,
              }
            }
          />
          <div
            className="cell line"
            style={
              Object {
                "left": 0,
                "top": 25,
              }
            }
          />
          <div
            className="cell line"
            style={
              Object {
                "left": 0,
                "top": 50,
              }
            }
          />
          <div
            className="cell line"
            style={
              Object {
                "left": 0,
                "top": 75,
              }
            }
          />
        </div>
      </Block>
      <div
        className="cell line"
        style={
          Object {
            "left": 0,
            "top": 400,
          }
        }
      />
      <div
        className="cell line"
        style={
          Object {
            "left": 0,
            "top": 425,
          }
        }
      />
      <div
        className="cell line"
        style={
          Object {
            "left": 0,
            "top": 450,
          }
        }
      />
      <div
        className="cell line"
        style={
          Object {
            "left": 0,
            "top": 475,
          }
        }
      />
      <div
        className="cell line"
        style={
          Object {
            "left": 25,
            "top": 400,
          }
        }
      />
      <div
        className="cell line"
        style={
          Object {
            "left": 25,
            "top": 425,
          }
        }
      />
      <div
        className="cell line"
        style={
          Object {
            "left": 25,
            "top": 450,
          }
        }
      />
      <div
        className="cell line"
        style={
          Object {
            "left": 25,
            "top": 475,
          }
        }
      />
      <div
        className="cell line"
        style={
          Object {
            "left": 50,
            "top": 400,
          }
        }
      />
      <div
        className="cell line"
        style={
          Object {
            "left": 50,
            "top": 425,
          }
        }
      />
      <div
        className="cell line"
        style={
          Object {
            "left": 50,
            "top": 450,
          }
        }
      />
      <div
        className="cell line"
        style={
          Object {
            "left": 50,
            "top": 475,
          }
        }
      />
      <div
        className="cell line"
        style={
          Object {
            "left": 75,
            "top": 400,
          }
        }
      />
      <div
        className="cell line"
        style={
          Object {
            "left": 75,
            "top": 425,
          }
        }
      />
      <div
        className="cell line"
        style={
          Object {
            "left": 75,
            "top": 450,
          }
        }
      />
      <div
        className="cell line"
        style={
          Object {
            "left": 75,
            "top": 475,
          }
        }
      />
      <div
        className="cell line"
        style={
          Object {
            "left": 100,
            "top": 400,
          }
        }
      />
      <div
        className="cell line"
        style={
          Object {
            "left": 100,
            "top": 425,
          }
        }
      />
      <div
        className="cell line"
        style={
          Object {
            "left": 100,
            "top": 450,
          }
        }
      />
      <div
        className="cell line"
        style={
          Object {
            "left": 100,
            "top": 475,
          }
        }
      />
      <div
        className="cell line"
        style={
          Object {
            "left": 150,
            "top": 400,
          }
        }
      />
      <div
        className="cell line"
        style={
          Object {
            "left": 150,
            "top": 425,
          }
        }
      />
      <div
        className="cell line"
        style={
          Object {
            "left": 150,
            "top": 450,
          }
        }
      />
      <div
        className="cell line"
        style={
          Object {
            "left": 150,
            "top": 475,
          }
        }
      />
      <div
        className="cell line"
        style={
          Object {
            "left": 175,
            "top": 400,
          }
        }
      />
      <div
        className="cell line"
        style={
          Object {
            "left": 175,
            "top": 425,
          }
        }
      />
      <div
        className="cell line"
        style={
          Object {
            "left": 175,
            "top": 450,
          }
        }
      />
      <div
        className="cell line"
        style={
          Object {
            "left": 175,
            "top": 475,
          }
        }
      />
      <div
        className="cell line"
        style={
          Object {
            "left": 200,
            "top": 400,
          }
        }
      />
      <div
        className="cell line"
        style={
          Object {
            "left": 200,
            "top": 425,
          }
        }
      />
      <div
        className="cell line"
        style={
          Object {
            "left": 200,
            "top": 450,
          }
        }
      />
      <div
        className="cell line"
        style={
          Object {
            "left": 200,
            "top": 475,
          }
        }
      />
      <div
        className="cell line"
        style={
          Object {
            "left": 225,
            "top": 400,
          }
        }
      />
      <div
        className="cell line"
        style={
          Object {
            "left": 225,
            "top": 425,
          }
        }
      />
      <div
        className="cell line"
        style={
          Object {
            "left": 225,
            "top": 450,
          }
        }
      />
      <div
        className="cell line"
        style={
          Object {
            "left": 225,
            "top": 475,
          }
        }
      />
    </div>
    <div
      className="score"
    >
      <table>
        <tbody>
          <tr>
            <td>
              Lines
            </td>
            <td>
              0
            </td>
          </tr>
          <tr>
            <td>
              Level
            </td>
            <td>
              1
            </td>
          </tr>
          <tr>
            <td>
              Score
            </td>
            <td>
              0
            </td>
          </tr>
          <tr>
            <td>
              Next
            </td>
            <td>
              <Block>
                <div
                  className="block"
                  style={Object {}}
                >
                  <div
                    className="cell line"
                    style={
                      Object {
                        "left": 0,
                        "top": 0,
                      }
                    }
                  />
                  <div
                    className="cell line"
                    style={
                      Object {
                        "left": 0,
                        "top": 25,
                      }
                    }
                  />
                  <div
                    className="cell line"
                    style={
                      Object {
                        "left": 0,
                        "top": 50,
                      }
                    }
                  />
                  <div
                    className="cell line"
                    style={
                      Object {
                        "left": 0,
                        "top": 75,
                      }
                    }
                  />
                </div>
              </Block>
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</Game>
`;

exports[`<Game> will remove lines 2`] = `
<Game
  blocks={
    Array [
      "LINE",
      "LINE",
    ]
  }
  collisionMap={
    Object {
      "0,16": "line",
      "0,17": "line",
      "0,18": "line",
      "0,19": "line",
      "1,16": "line",
      "1,17": "line",
      "1,18": "line",
      "1,19": "line",
      "2,16": "line",
      "2,17": "line",
      "2,18": "line",
      "2,19": "line",
      "3,16": "line",
      "3,17": "line",
      "3,18": "line",
      "3,19": "line",
      "4,16": "line",
      "4,17": "line",
      "4,18": "line",
      "4,19": "line",
      "5,16": "line",
      "5,17": "line",
      "5,18": "line",
      "5,19": "line",
      "6,16": "line",
      "6,17": "line",
      "6,18": "line",
      "6,19": "line",
      "7,16": "line",
      "7,17": "line",
      "7,18": "line",
      "7,19": "line",
      "8,16": "line",
      "8,17": "line",
      "8,18": "line",
      "8,19": "line",
      "9,16": "line",
      "9,17": "line",
      "9,18": "line",
      "9,19": "line",
    }
  }
  dispatch={[Function]}
  score={
    Object {
      "level": 1,
      "numBlocks": 0,
      "numLines": 0,
      "score": 0,
    }
  }
>
  <div
    className="game"
  >
    <div
      className="area"
    >
      <Block
        blockId={0}
        collisionMap={
          Object {
            "0,16": "line",
            "0,17": "line",
            "0,18": "line",
            "0,19": "line",
            "1,16": "line",
            "1,17": "line",
            "1,18": "line",
            "1,19": "line",
            "2,16": "line",
            "2,17": "line",
            "2,18": "line",
            "2,19": "line",
            "3,16": "line",
            "3,17": "line",
            "3,18": "line",
            "3,19": "line",
            "4,16": "line",
            "4,17": "line",
            "4,18": "line",
            "4,19": "line",
            "5,16": "line",
            "5,17": "line",
            "5,18": "line",
            "5,19": "line",
            "6,16": "line",
            "6,17": "line",
            "6,18": "line",
            "6,19": "line",
            "7,16": "line",
            "7,17": "line",
            "7,18": "line",
            "7,19": "line",
            "8,16": "line",
            "8,17": "line",
            "8,18": "line",
            "8,19": "line",
            "9,16": "line",
            "9,17": "line",
            "9,18": "line",
            "9,19": "line",
          }
        }
        level={1}
        moving={true}
        onStopMoving={[Function]}
      >
        <div
          className="block"
          style={
            Object {
              "left": 125,
              "top": 400,
            }
          }
        >
          <div
            className="cell line"
            style={
              Object {
                "left": 0,
                "top": 0,
              }
            }
          />
          <div
            className="cell line"
            style={
              Object {
                "left": 0,
                "top": 25,
              }
            }
          />
          <div
            className="cell line"
            style={
              Object {
                "left": 0,
                "top": 50,
              }
            }
          />
          <div
            className="cell line"
            style={
              Object {
                "left": 0,
                "top": 75,
              }
            }
          />
        </div>
      </Block>
      <div
        className="cell line"
        style={
          Object {
            "left": 0,
            "top": 400,
          }
        }
      />
      <div
        className="cell line"
        style={
          Object {
            "left": 0,
            "top": 425,
          }
        }
      />
      <div
        className="cell line"
        style={
          Object {
            "left": 0,
            "top": 450,
          }
        }
      />
      <div
        className="cell line"
        style={
          Object {
            "left": 0,
            "top": 475,
          }
        }
      />
      <div
        className="cell line"
        style={
          Object {
            "left": 25,
            "top": 400,
          }
        }
      />
      <div
        className="cell line"
        style={
          Object {
            "left": 25,
            "top": 425,
          }
        }
      />
      <div
        className="cell line"
        style={
          Object {
            "left": 25,
            "top": 450,
          }
        }
      />
      <div
        className="cell line"
        style={
          Object {
            "left": 25,
            "top": 475,
          }
        }
      />
      <div
        className="cell line"
        style={
          Object {
            "left": 50,
            "top": 400,
          }
        }
      />
      <div
        className="cell line"
        style={
          Object {
            "left": 50,
            "top": 425,
          }
        }
      />
      <div
        className="cell line"
        style={
          Object {
            "left": 50,
            "top": 450,
          }
        }
      />
      <div
        className="cell line"
        style={
          Object {
            "left": 50,
            "top": 475,
          }
        }
      />
      <div
        className="cell line"
        style={
          Object {
            "left": 75,
            "top": 400,
          }
        }
      />
      <div
        className="cell line"
        style={
          Object {
            "left": 75,
            "top": 425,
          }
        }
      />
      <div
        className="cell line"
        style={
          Object {
            "left": 75,
            "top": 450,
          }
        }
      />
      <div
        className="cell line"
        style={
          Object {
            "left": 75,
            "top": 475,
          }
        }
      />
      <div
        className="cell line"
        style={
          Object {
            "left": 100,
            "top": 400,
          }
        }
      />
      <div
        className="cell line"
        style={
          Object {
            "left": 100,
            "top": 425,
          }
        }
      />
      <div
        className="cell line"
        style={
          Object {
            "left": 100,
            "top": 450,
          }
        }
      />
      <div
        className="cell line"
        style={
          Object {
            "left": 100,
            "top": 475,
          }
        }
      />
      <div
        className="cell line"
        style={
          Object {
            "left": 150,
            "top": 400,
          }
        }
      />
      <div
        className="cell line"
        style={
          Object {
            "left": 150,
            "top": 425,
          }
        }
      />
      <div
        className="cell line"
        style={
          Object {
            "left": 150,
            "top": 450,
          }
        }
      />
      <div
        className="cell line"
        style={
          Object {
            "left": 150,
            "top": 475,
          }
        }
      />
      <div
        className="cell line"
        style={
          Object {
            "left": 175,
            "top": 400,
          }
        }
      />
      <div
        className="cell line"
        style={
          Object {
            "left": 175,
            "top": 425,
          }
        }
      />
      <div
        className="cell line"
        style={
          Object {
            "left": 175,
            "top": 450,
          }
        }
      />
      <div
        className="cell line"
        style={
          Object {
            "left": 175,
            "top": 475,
          }
        }
      />
      <div
        className="cell line"
        style={
          Object {
            "left": 200,
            "top": 400,
          }
        }
      />
      <div
        className="cell line"
        style={
          Object {
            "left": 200,
            "top": 425,
          }
        }
      />
      <div
        className="cell line"
        style={
          Object {
            "left": 200,
            "top": 450,
          }
        }
      />
      <div
        className="cell line"
        style={
          Object {
            "left": 200,
            "top": 475,
          }
        }
      />
      <div
        className="cell line"
        style={
          Object {
            "left": 225,
            "top": 400,
          }
        }
      />
      <div
        className="cell line"
        style={
          Object {
            "left": 225,
            "top": 425,
          }
        }
      />
      <div
        className="cell line"
        style={
          Object {
            "left": 225,
            "top": 450,
          }
        }
      />
      <div
        className="cell line"
        style={
          Object {
            "left": 225,
            "top": 475,
          }
        }
      />
      <div
        className="cell line"
        style={
          Object {
            "left": 125,
            "top": 400,
          }
        }
      />
      <div
        className="cell line"
        style={
          Object {
            "left": 125,
            "top": 425,
          }
        }
      />
      <div
        className="cell line"
        style={
          Object {
            "left": 125,
            "top": 450,
          }
        }
      />
      <div
        className="cell line"
        style={
          Object {
            "left": 125,
            "top": 475,
          }
        }
      />
    </div>
    <div
      className="score"
    >
      <table>
        <tbody>
          <tr>
            <td>
              Lines
            </td>
            <td>
              0
            </td>
          </tr>
          <tr>
            <td>
              Level
            </td>
            <td>
              1
            </td>
          </tr>
          <tr>
            <td>
              Score
            </td>
            <td>
              0
            </td>
          </tr>
          <tr>
            <td>
              Next
            </td>
            <td>
              <Block>
                <div
                  className="block"
                  style={Object {}}
                >
                  <div
                    className="cell line"
                    style={
                      Object {
                        "left": 0,
                        "top": 0,
                      }
                    }
                  />
                  <div
                    className="cell line"
                    style={
                      Object {
                        "left": 0,
                        "top": 25,
                      }
                    }
                  />
                  <div
                    className="cell line"
                    style={
                      Object {
                        "left": 0,
                        "top": 50,
                      }
                    }
                  />
                  <div
                    className="cell line"
                    style={
                      Object {
                        "left": 0,
                        "top": 75,
                      }
                    }
                  />
                </div>
              </Block>
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</Game>
`;
